# DocuGraph-AI

./: .gitignore  LICENSE  README.md  app.py  cli.py  pyproject.toml  requirements.txt
AI Powered Project Doc/: app.py  pyproject.toml  requirements.txt
AI Powered Project Doc/agents/: team.py
AI Powered Project Doc/utils/: ollama_client.py
AI_Powered_Project_Doc/utils/: onnx_embedder.py
agents/: specialists.py  team.py
parsers/: file_reader.py
prompts/: library.py
utils/: doc_generator.py  ollama_client.py
